<resources>
    <string name="app_name">Just Speak</string>
    <string name="learn_a_language_nat_your_nown_pace">Learn a language\nat your own Pace</string>
    <string name="speak_on_the_go">Speak on the go!</string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="languages">Languages</string>
    <string name="about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to JustSpeak!</string>
    <string name="would_you_like_to_speak_fluently_keep_scrolling">Would you like to speak fluently? keep scrolling!</string>
    <string name="languages_we_teach">Languages we teach</string>
    <string name="content_contributors">Content Contributors</string>
    <string name="chichewa">Chichewa</string>
    <string name="french">French</string>
    <string name="german" translatable="false">German</string>
    <string name="a_language">Pick a language to start with</string>
    <string name="about_justspeak">About JustSpeak</string>
    <string name="aboutinfoyes">justspeak is a hobbyist language group based in Malawi. It has one sole aim which is to get people speaking a language as soon as possible.</string>
    <string name="aboutinfono">No need to spend too much time trying to grasp grammatical concepts. We want you to speak right on the go!!</string>
    <string name="contact">Contact</string>
    <string name="emailer">mvundomsiska13@gmail.com</string>
    <string name="_265_0_882_292_415">+265 (0) 882 292 415</string>
    <string name="wilkommen">Wilkommen</string>
    <string name="to">to</string>
    <string name="germanp1">German is one of the most commonly used languages in the European Union and is the official language of Germany, Austria, Liechtenstein as well as being one of the four official languages of Switzerland. The language is furthermore spoken in minority settlements throughout Europe, Africa (Namibia), North and South America. There are over 130 million German speakers worldwide including native speakers and non native speakers</string>
    <string name="germanp2">Stereotypically, German is known to be a harsh language due to usage of guttural R and exaggerated World War 2 movies. However, with time and practice German sounds can become music to your ears and you will soon realise how beautiful the language can be. You will also discover that German can be much easy to learn if you already speak English (German and English are cousins from the Proto-Germanic language group)</string>
    <string name="germanp3">Of course there are tonnes of German dialects spoken in different parts of Germany as well as the other German speaking countries, but you can easily get by as Hochdeutsch (High standard German) is understood by many German speakers.</string>
    <string name="germanp4">On this platform you will be able to learn and understand German enough to have a basic conversation a well as order some food! Head over to the panel and begin your journey. You do not have to go in order, that can get boring. Explore and learn according to your style.</string>
    <string name="grammar">Grammar</string>
    <string name="phrases">Phrases</string>
    <string name="resources">Resources</string>
    <string name="trivia">Trivia</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="german_grammar">German Grammar</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="alphabet">Alphabet</string>
    <string name="adjectives">Adjectives</string>
    <string name="cases">Cases</string>
    <string name="nouns">Nouns</string>
    <string name="numbers">Numbers</string>
    <string name="sentence_n_structure">Sentence\n Structure</string>
    <string name="time">Time</string>
    <string name="tenses">Tenses</string>
    <string name="verbs_and_n_conjugation">Verbs and\n Conjugation</string>
    <string name="alphabet_das_alphabet">Alphabet (Das Alphabet)</string>
    <string name="GAsummary1">Here you will learn the German Alphabet and the pronunciation. The German Alphabet is not so different from the English Alphabet, only that it has a few letters pronounced differently and a few extra letters.</string>
    <string name="GAsummary2">Below is a table with the German Alphabet and its pronunciation</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="audio">Audio</string>
    <string name="letter">Letter</string>
    <string name="justspeak_german">JustSpeak German</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">v</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="umlauta">Ä</string>
    <string name="umlauto">Ö</string>
    <string name="umlautu">Ü</string>
    <string name="umlautss">ß</string>
    <string name="aah">aah</string>
    <string name="bae">bae</string>
    <string name="tsae">tsae</string>
    <string name="day">day</string>
    <string name="eh">eh</string>
    <string name="eff">eff</string>
    <string name="gaah">gaah</string>
    <string name="haa">haa</string>
    <string name="eeh">eeh</string>
    <string name="yot">yot</string>
    <string name="kaa">kaa</string>
    <string name="el">el</string>
    <string name="em">em</string>
    <string name="en">en</string>
    <string name="oh">oh</string>
    <string name="pae">pae</string>
    <string name="koo">koo</string>
    <string name="er">e-a</string>
    <string name="ess">ess</string>
    <string name="tae">tae</string>
    <string name="ooh">ooh</string>
    <string name="faw">faw</string>
    <string name="vay">vay</string>
    <string name="eeks">eeks</string>
    <string name="oopsilohn">oopsilohn</string>
    <string name="tsett">tsett</string>
    <string name="ae">ae</string>
    <string name="oe">oe </string>
    <string name="ue">ue (long)</string>
    <string name="ss">ss</string>
    <string name="adjectives_die_adjektive">Adjectives (die Adjektiven)</string>
    <string name="german_adjective_paragraph1">Adjectives like in any language are used to give descriptions of nouns. German adjectives are dependent on the case and gender of the noun. If you do not understand cases, see Cases where you can get a clear explanation of the articles and case system used in German. Below you will find a table of common adjectives used in German and how they can be used in sentences.</string>
    <string name="adj">Adj</string>
    <string name="meaning">Meaning</string>
    <string name="eng">Eng</string>
    <string name="sentence">Sentence</string>
    <string name="alt">Alt</string>
    <string name="jung">Jung</string>
    <string name="gross">Groß</string>
    <string name="klein">Klein</string>
    <string name="schoen">Schön</string>
    <string name="haesslich">Hässlich</string>
    <string name="frueh">Früh</string>
    <string name="spat">Spät</string>
    <string name="leicht">Leicht</string>
    <string name="schwer">Schwer</string>
    <string name="neu">Neu</string>
    <string name="langsam">Langsam</string>
    <string name="schnell">Schnell</string>
    <string name="lang">Lang</string>
    <string name="kurz">Kurz</string>
    <string name="old">Old</string>
    <string name="young">Young</string>
    <string name="tall">Tall</string>
    <string name="small">Small</string>
    <string name="beautiful">Beautiful</string>
    <string name="ugly">Ugly</string>
    <string name="early">Early</string>
    <string name="late">late</string>
    <string name="light">Light</string>
    <string name="heavy">Heavy</string>
    <string name="newly">New</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="longen">Long</string>
    <string name="shortly">Short</string>
    <string name="geradjsentence1">Der Hund ist alt. (The dog is old)</string>
    <string name="geradjsentence2">Das junge Mädchen isst. (The young girl is eating)</string>
    <string name="geradjsentence3">	Die große Frau hat eine schöne lächeln. (The tall woman has a beautiful smile)</string>
    <string name="geradjsentence4">Die kleine Katze springt über die Blumen. (The small cat jumps over the flowers)</string>
    <string name="geradjsentence5">Die schöne Dame tanzt gern. (The beautiful lady likes to dance)</string>
    <string name="geradjsentence6">Die hässliche Hexe lacht. (The ugly witch is laughing))</string>
    <string name="geradjsentence7">Ich stehe morgens früh auf. (I wake up early in the morning)</string>
    <string name="geradjsentence8">Er kommt zu spät. (He is late)</string>
    <string name="geradjsentence9">Das Rezept ist ganz leicht./ Ein leichter Rucksack ist einem schweren Koffer vorzuziehen.
        (The recipe is really easy/ A lighter Backpack is preferable to a heavy Suitcase)</string>
    <string name="geradjsentence10">Mein Koffer ist jedoch schwer (But my suitcase is heavy)</string>
    <string name="geradjsentence11">Das ist mein neues Handy. (That is my new phone)</string>
    <string name="geradjsentence12">Das Internet ist Heute langsam. (The internet is slow today)</string>
    <string name="geradjsentence13">Das Fahrrad ist ziemlich schnell. (The bike is pretty fast).</string>
    <string name="geradjsentence14">Er hat einen langen Hals. (He has a long neck)</string>
    <string name="nom">Nom</string>
    <string name="acc">Acc</string>
    <string name="dat">Dat</string>
    <string name="die_pronomen">Pronouns (die Pronomen)</string>
    <string name="gerPronounText1">Pronouns are the little words that replace nouns in a sentence. The German language like other languages also has pronouns. German has a number of pronouns which will be explained in this chapter. Once you get a feel for pronouns, your fluency will definitely improve</string>
    <string name="personal_pronouns">Personal Pronouns</string>
    <string name="gerPronounText2">In english these are equivalent to (I, you, she, he, it, me). The pronouns however change depending on the case. In German we have the following</string>
    <string name="sentence_structure_satzbau">Sentence structure (Satzbau)</string>
    <string name="GerSenStruP1">One of the most dreaded yet essential skills in German in the sentence structure. Understanding basic German word order is a bridge to fluency and speaking. In this Chapteryou will learn how sentences in German are structured and how to do this easily</string>
    <string name="GerSenStruP2">Basic German sentences have the same strcture as english sentences: They follow the Subject - Verb - Object sequence e.g.</string>
</resources>